--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background: var(--black);
 }
 main {
   display: flex;
@@ -18,32 +19,29 @@ main {
   padding: 0px 0px 0px 0px;
   justify-content: center;
   align-items: center;
-  background: var(--black);
-  height: 100vh;
+  flex-direction: column;
 }
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 40px;
 }
-.cover-img {
-  background: url(./images/hero_image_840x840.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position: cover;
-  height: 1000px;
-  width: 1500px;
+.logo-sm {
+  margin-top: 32px;
+  margin-bottom: 0;
 }
-
+.cover-img img {
+  width: 840px;
+  height: 840px;
+  flex-shrink: 0;
+}
 .titles {
   width: 100%;
   height: auto;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 16px;
   display: inline-flex;
   position: absolute;
 }
@@ -51,7 +49,7 @@ main {
 .hero-title {
   color: var(--white-text);
   font-family: "Titillium Web", sans-serif;
-  font-size: 48px;
+  font-size: 38px;
   font-style: normal;
   font-weight: 700;
   line-height: 120%; /* 57.6px */
