--- a/style.css
+++ b/style.css
@@ -31,6 +31,18 @@ main {
   margin-top: 32px;
   margin-bottom: -100px;
 }
+.devider {
+  position: absolute;
+  margin-top: -600px;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
 .cover-img img {
   width: 840px;
   height: 840px;
