--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --dark-gray: #333333;
   --black: #0e0e10;
   --white-text: #ffffff;
+  --purple: #6400e6;
 }
 
 * {
@@ -23,6 +24,34 @@ body {
   font-weight: 400;
 }
 
+h1 {
+  color: #fff;
+  font-size: 6.4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 7.68rem; /* 76.8px */
+  letter-spacing: -1.28px;
+  margin-bottom: 3.6rem;
+}
+
+h2 {
+  color: #fff;
+  font-size: 3.2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 3.84rem; /* 38.4px */
+  letter-spacing: -0.64px;
+  margin-bottom: 8px;
+}
+h3 {
+  color: #fff;
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  letter-spacing: -0.48px;
+  margin-bottom: 3.6rem;
+}
 /******************/
 /*   HEADER       */
 /******************/
@@ -34,21 +63,100 @@ body {
   padding: 2.4rem 12rem;
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px solid var(--dark-gray);
 }
 
 .logo {
   width: 15.07rem;
   height: 5.2rem;
 }
-/* .devider {
-  position: absolute;
-  margin-top: -600px;
+nav {
+  display: flex;
+  align-items: center;
+}
+.main-nav-links {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.4rem;
+  letter-spacing: -0.32px;
+  transition: all 0.3s;
+}
+
+.cta-btn:link,
+.cta-btn:visited {
+  padding: 1rem 3.2rem;
+  background: var(--purple);
+  border-radius: 8px;
+}
+.btn:hover {
+  box-shadow: 0px 3px 0px 0px rgba(100, 0, 230, 1);
+}
+
+.main-section {
+  background-color: var(--black);
+  max-width: 192rem;
+  /* height: 221.7rem; */
+}
+
+.hero {
+  max-width: 168rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  gap: 6.4rem;
+  margin: 0 auto;
+  padding: 10rem 12rem;
+}
+
+.hero-text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1 0 0;
+}
+
+.hero-img {
   width: 100%;
-  height: 1px;
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.8) 50%,
-    rgba(255, 255, 255, 0) 100%
-  );
-} */
+  height: 46rem;
+  border: 2px solid #fff;
+  border-radius: 24px;
+}
+
+.hero-description {
+  color: #fff;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.4rem; /* 150% */
+  letter-spacing: -0.32px;
+}
+
+/*BOX SECTION */
+
+.boxes {
+  background-color: var(--black);
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 4rem; */
+  display: flex;
+  gap: 4rem;
+  margin: 0 auto;
+  padding: 0 12rem;
+}
+
+.box {
+  background-color: var(--white);
+  width: 39rem;
+  height: 32rem;
+  border-radius: 2.4rem;
+}
