--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ nav {
   gap: 4rem;
   margin: 0 auto;
   padding: 0 12rem;
+  margin-bottom: 4rem;
 }
 
 .box {
@@ -159,4 +160,22 @@ nav {
   width: 39rem;
   height: 32rem;
   border-radius: 2.4rem;
+}
+
+.features {
+  padding: 0 12rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 4rem;
+  align-items: center;
+  padding-bottom: 4rem;
+}
+.pc-img {
+  width: 100%;
+  height: 84rem;
+  border: 2px solid var(--white);
+  border-radius: 24px;
+}
+.mg-btm-sm {
+  padding-bottom: 4rem;
 }
